# Scorpius-X

./: package-lock.json
Desktop/Scorpius-Enterprise/: .env  .env.example  ACCESS_SUMMARY.md  Create-Desktop-Shortcuts.ps1  ENTERPRISE_READY.md  FUTURE_ACCESS.md  GITHUB_SETUP.md  INSTALLATION.md  Launch-Desktop.bat  Launch-Scorpius.bat  Launch-Web.bat  QUICK_START.md  Quick-Status.ps1  README.md  REBUILD_VERIFICATION.md  Start-Scorpius.ps1  docker-compose.yml  docker-manager.ps1  fix-docker.ps1  integration-test.html  launch-electron-debug.ps1  launch-electron.ps1  scorpius-platform.code-workspace  setup-scorpius.ps1  start-electron-quick.ps1  start-electron.ps1  start-scorpius.sh  test-auth.ps1  test-frontend-auth.js  test-frontend-errors.html  test-frontend-login.ps1  test-login-scenarios.ps1  users.json  verify-setup.ps1
Desktop/Scorpius-Enterprise-Final/: PROJECT_STRUCTURE.md  README.md  start.bat  start.sh
Desktop/Scorpius-Enterprise-Final/backend/: app.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/: README.md  otel-config.yaml  pyproject.toml
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/: .env.example  docker-compose.yml  docker-entrypoint.sh  new-dash-main.code-workspace
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/grafana/provisioning/dashboards/: dashboard.yaml  scorpius-dashboard.json
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/: cli.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/analysis/: ai_analyzer.py  models.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/api/: server.py  websocket.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/core/: config.py  database.py  logging.py  orchestrator.py  plugin_manifest.py  plugin_registry.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/plugins/: bytecode_similarity.py  reentrancy_detector.py  slither_static.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/plugins/templates/rust/: cargo.toml  plugin.toml
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/plugins/templates/rust/src/: lib.rs
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/replay/: routes.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scorpius_scanner/simulation/: __init__.py  advanced_runner.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/SCANNER-main/scripts/: build_plugin_templates.sh  test_enterprise.sh
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/helm/scorpius/: values.yaml
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/: .pre-commit-config.yaml  models.py  plugin_base.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/analysis/: report_generator.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/api/: models.py  security.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/core/: audit.py  queue.py  sandbox.py  stream_queue,py  telemetry.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/plugins/: honeypot_detector.py  mythril_symbolic.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scorpius_scanner/replay/: manager.py
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/scripts/: setup.sh
Desktop/Scorpius-Enterprise/backend/backend/backend/SCANNER-main/tests/: test_enterprise.py  test_wasm_sandbox.py
Desktop/Scorpius-Enterprise/backend/backend/backend/elite_mempool_system_final/services/rule_engine/: Cargo.toml  Dockerfile
Desktop/Scorpius-Enterprise/backend/backend/backend/elite_mempool_system_final/services/rule_engine/src/: main.rs  metrics.rs  rule_dsl.rs  rule_executor.rs
Desktop/Scorpius-X/: .gitignore  README.md  fix-deps.ps1  package-lock.json  package.json  scorpius_chat.db  setup.ps1  start-backend.ps1  start-dev.ps1  start-electron.ps1  start-frontend.ps1
Desktop/Scorpius-X/backend/rust_mev_components/rust_core/: Cargo.toml
Desktop/Scorpius-X/backend/rust_mev_core/: Cargo.toml  config.toml
Desktop/Scorpius-X/backend/rust_mev_core/abis/: AaveV3FlashLoanArbMultiHop.json  IChainlinkAggregatorV3.json  IERC20.json  IUiPoolDataProviderV3.json  IUniswapV2Factory.json  IUniswapV3QuoterV2.json
Desktop/Scorpius-X/backend/rust_mev_core/src/: main.rs  types.rs
Desktop/ScorpiusX/: .env.example  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  BACKEND_DEVELOPER_GUIDE.md  CHANGELOG.md  COMPLETE_BACKEND_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DISTRIBUTION_CHECKLIST.md  Dockerfile  ELECTRON_SETUP.md  GUMROAD_DISTRIBUTION.md  LICENSE  MOBILE_OPTIMIZATIONS.md  README.md  SECURITY.md  SETUP_GUIDE.md  USER_GUIDE.md  WINDOWS_DEPLOYMENT.md  backend-template.py  build-gumroad-packages.js  build-windows.bat  bundlesize.config.json  create-temp-icon.js  dev-windows.bat  electron-builder.json  index.html  integrated_backend.py  nginx.conf  package-lock.json  package.json  start-all.cjs  test-toast.js  tsconfig.json  tsconfig.node.json  verify-electron-build.js  verify-windows-ready.js  vite.config.ts  (+4 more)
(+583 files in other folders)
