[package]
name = "scorpius-rule-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
kafka = "0.9"
rdkafka = { version = "0.36", features = ["cmake-build"] }
wasmtime = "15.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
hex = "0.4"
ethabi = "18.0"
prometheus = { version = "0.13", features = ["process"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"

[dependencies.redis]
version = "0.24"
features = ["aio", "tokio-comp"]

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[features]
simd = []
default = ["simd"]
